k8s/production/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: generator-api
spec:
  ports:
  - port: 80
    targetPort: 45054
  selector:
    app: facility
    role: generator-api
  type: NodePort
