k8s/production/ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: generator-api
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: fsdgenapi-faithlife-com
    networking.gke.io/managed-certificates: fsdgenapi-faithlife-com
spec:
  backend:
    serviceName: generator-api
    servicePort: 80
